Added openAPI refactoring changes
